# atlassian-cli

./: .env.example  .gitignore  .tool-versions  CLAUDE.md  Cargo.toml  README.en.md  README.md  codecov.yml  install.sh  uninstall.sh
.claude/skills/jira-confluence/: SKILL.md
.github/workflows/: ci.yml  lint.yml  release.yml
scripts/: install.sh
src/: config.rs  main.rs
src/confluence/: api.rs  fields.rs  mod.rs
src/jira/: adf.rs  api.rs  fields.rs  mod.rs
src/markdown/: common.rs  mod.rs
src/markdown/adf/: blocks.rs  inline.rs  marks.rs  mod.rs
src/markdown/confluence/: cleanup.rs
