[package]
name = "atlassian-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"
authors = ["Atlassian CLI Team"]
description = "High-performance CLI for Atlassian Jira and Confluence"
license = "MIT"
keywords = ["atlassian", "jira", "confluence", "cli"]
categories = ["command-line-utilities"]

[lib]
name = "atlassian_cli"
path = "src/lib.rs"

[[bin]]
name = "atlassian"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.9"
dirs = "6.0"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
base64 = "0.22.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = 3
